added: css style, static file, updated components

--- a/django3Try/tryDjango/main/templates/main/about.html
+++ b/django3Try/tryDjango/main/templates/main/about.html
@@ -5,6 +5,16 @@
 {% endblock %}
 
 {% block content %}
-    <h1>About us</h1>
+    <div class="features">
+        <h1>
+            About us
+        </h1>
+        <p>
+            in progress
+        </p>
+        <button class="btn btn-danger">
+            button
+        </button>
+    </div>
     {% include 'main/ourContacts.html' %}
 {% endblock %}
