--- a/django3Try/tryDjango/main/templates/main/index.html
+++ b/django3Try/tryDjango/main/templates/main/index.html
@@ -5,5 +5,15 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Main page</h1>
+    <div class="features">
+        <h1>
+            Main page
+        </h1>
+        <p>
+            1337, L33T, L33T speak (leet — elite) — интернет-язык маленьких геймеров и хакеров годов 2000-ых. Абсолютно нечитабелен в устной речи, годится только для употребления письменном виде. Слово elite помогает почувствовать себя особенным. Об этом сообщает "Рамблер".
+        </p>
+        <button class="btn btn-warning">
+            To page about us
+        </button>
+    </div>
 {% endblock %}
