--- a/django3Try/tryDjango/main/templates/main/layout.html
+++ b/django3Try/tryDjango/main/templates/main/layout.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,9 +7,24 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
+    <link href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 </head>
 <body>
+    <aside>
+        <img src="{% static 'main/img/1337.jpg' %}" alt="1337">
+        <span class="logo">1337</span>
+        <h3>Navigation</h3>
+        <ul>
+            <a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Main page</li></a>
+            <a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i> About me</li></a>
+            <a href=""><li><i class="fas fa-paper-plane"></i> Contact</li></a>
+        </ul>
+    </aside>
+    <main>
     {% block content %}
     {% endblock %}
+    </main>
 </body>
 </html>
