--- a/django3Try/tryDjango/main/templates/main/layout.html
+++ b/django3Try/tryDjango/main/templates/main/layout.html
@@ -18,6 +18,7 @@
         <h3>Navigation</h3>
         <ul>
             <a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Main page</li></a>
+            <a href="{% url 'news_home' %}"><li><i class="fas fa-address-card"></i> News</li></a>
             <a href="{% url 'about' %}"><li><i class="fas fa-address-card"></i> About me</li></a>
             <a href=""><li><i class="fas fa-paper-plane"></i> Contact</li></a>
         </ul>
